force-app/main/default/objects/Sales_Invoice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Facilitate customer 360d view.
Users will be able to view all customer invoices from account related tab.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Invoices</relationshipLabel>
    <relationshipName>Sales_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>