force-app/main/default/objects/Sales_Invoice__c/fields/Building_NameBT__c.field-meta.xml
<CustomField>
    <fullName>Building_NameBT__c</fullName>
    <inlineHelpText>Bill To Address</inlineHelpText>
    <label>Building Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>