force-app/main/default/objects/Sales_Invoice__c/fields/COE_Category__c.field-meta.xml
<CustomField>
    <fullName>COE_Category__c</fullName>
    <label>COE Category</label>
    <length>1</length>
    <type>Text</type>
</CustomField>