force-app/main/default/objects/Sales_Invoice__c/fields/Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Color_Code__c</fullName>
    <formula>Stock_Vehicle_Master__r.Color_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color Code</label>
    <type>Text</type>
</CustomField>