force-app/main/default/objects/Sales_Invoice__c/fields/Color_Description__c.field-meta.xml
<CustomField>
    <fullName>Color_Description__c</fullName>
    <formula>Stock_Vehicle_Master__r.Color_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color Description</label>
    <type>Text</type>
</CustomField>