force-app/main/default/objects/Sales_Invoice__c/fields/Credit_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Date__c</fullName>
    <formula>Credit_Note__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Note Date</label>
    <type>Date</type>
</CustomField>