force-app/main/default/objects/Sales_Invoice__c/fields/Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_No__c</fullName>
    <label>Customer No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>