force-app/main/default/objects/Sales_Invoice__c/fields/Floor_UnitBT__c.field-meta.xml
<CustomField>
    <fullName>Floor_UnitBT__c</fullName>
    <inlineHelpText>Bill To Address</inlineHelpText>
    <label>Floor/ Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>