force-app/main/default/objects/Sales_Invoice__c/fields/Floor_UnitRA__c.field-meta.xml
<CustomField>
    <fullName>Floor_UnitRA__c</fullName>
    <label>Floor/ Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>