force-app/main/default/objects/Sales_Invoice__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <description>Populate from metadata GST Rate based on date range</description>
    <label>GST %</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>