force-app/main/default/objects/Sales_Invoice__c/fields/Invoice_Value__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Value__c</fullName>
    <formula>List_Price__c + Total_SA_Accessories__c + Total_SA_Additional_Charges__c - Total_Discount_Price__c + COE_Charged__c - COE_Refund__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>