force-app/main/default/objects/Sales_Invoice__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <formula>Stock_Vehicle_Master__r.Model__r.Name</formula>
    <label>Model</label>
    <type>Text</type>
</CustomField>