force-app/main/default/objects/Sales_Invoice__c/fields/Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Model_Year__c</fullName>
    <formula>Stock_Vehicle_Master__r.Model_Year_Code__r.Name</formula>
    <label>Model Year</label>
    <type>Text</type>
</CustomField>