force-app/main/default/objects/Sales_Invoice__c/fields/Postal_CodeBT__c.field-meta.xml
<CustomField>
    <fullName>Postal_CodeBT__c</fullName>
    <inlineHelpText>Bill To Address</inlineHelpText>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>