force-app/main/default/objects/Sales_Invoice__c/fields/Postal_CodeRA__c.field-meta.xml
<CustomField>
    <fullName>Postal_CodeRA__c</fullName>
    <label>Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>