force-app/main/default/objects/Sales_Invoice__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <formula>Stock_Vehicle_Master__r.Registration_Date__c</formula>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>