force-app/main/default/objects/Sales_Invoice__c/fields/Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Registration_No__c</fullName>
    <formula>Stock_Vehicle_Master__r.Registration_no__c</formula>
    <label>Registration No</label>
    <type>Text</type>
</CustomField>