force-app/main/default/objects/Sales_Invoice__c/fields/Sales_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement_Date__c</fullName>
    <formula>Sales_Agreement__r.CreatedDate</formula>
    <label>Sales Agreement Date</label>
    <type>Date</type>
</CustomField>