force-app/main/default/objects/Sales_Invoice__c/fields/Sales_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Sales Invoice Date</label>
    <type>Date</type>
</CustomField>