force-app/main/default/objects/Sales_Invoice__c/fields/Stock_Vehicle_Master__c.field-meta.xml
<CustomField>
    <fullName>Stock_Vehicle_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populate from vehicle reservation record.</description>
    <label>Stock Vehicle Master</label>
    <referenceTo>Vehicle_Master2__c</referenceTo>
    <relationshipLabel>Sales Invoices</relationshipLabel>
    <relationshipName>Sales_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>