force-app/main/default/objects/Sales_Invoice__c/fields/Street_NameBT__c.field-meta.xml
<CustomField>
    <fullName>Street_NameBT__c</fullName>
    <inlineHelpText>Bill To Address</inlineHelpText>
    <label>Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>