force-app/main/default/objects/Sales_Invoice__c/fields/Total_Discount_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Price__c</fullName>
    <formula>Accessories_Discount__c + Promo_Discount__c + COE_Refund__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Accessories Discount + Promo Discount</inlineHelpText>
    <label>Total Discount Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>