force-app/main/default/objects/Sales_Invoice__c/fields/Total_SA_Additional_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_SA_Additional_Charges__c</fullName>
    <label>Total SA Additional Charges</label>
    <summarizedField>Sales_Invoice_Line_Item__c.Line_Net_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Invoice_Line_Item__c.Item_Category__c</field>
        <operation>equals</operation>
        <value>Additional Charges</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Invoice_Line_Item__c.Inclusive__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Invoice_Line_Item__c.Sales_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>