force-app/main/default/objects/Sales_Invoice__c/fields/Trim_Code__c.field-meta.xml
<CustomField>
    <fullName>Trim_Code__c</fullName>
    <formula>Stock_Vehicle_Master__r.Trim_Code__r.Name</formula>
    <label>Trim Code</label>
    <type>Text</type>
</CustomField>