force-app/main/default/objects/Sales_Invoice__c/fields/Trim_Description__c.field-meta.xml
<CustomField>
    <fullName>Trim_Description__c</fullName>
    <formula>Stock_Vehicle_Master__r.Trim_Description__c</formula>
    <label>Trim Description</label>
    <type>Text</type>
</CustomField>