force-app/main/default/objects/Sales_Invoice__c/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <formula>Stock_Vehicle_Master__r.Variant__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variant</label>
    <type>Text</type>
</CustomField>