force-app/main/default/objects/Sales_Invoice__c/recordTypes/Invoice_with_Sales_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Invoice_with_Sales_Agreement</fullName>
    <active>true</active>
    <label>Invoice with Sales Agreement</label>
</RecordType>