force-app/main/default/objects/Sales_Invoice__c/recordTypes/Invoice_without_Sales_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Invoice_without_Sales_Agreement</fullName>
    <active>true</active>
    <label>Invoice without Sales Agreement</label>
</RecordType>