force-app/main/default/objects/Sales_Invoice__c/listViews/Oldest_Debtors.listView-meta.xml
<ListView>
    <fullName>Oldest_Debtors</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Sales_Invoice_Date__c</columns>
    <columns>Invoice_Value__c</columns>
    <columns>Days_Overdue__c</columns>
    <filterScope>Everything</filterScope>
    <label>Oldest Outstanding Invoices</label>
</ListView>